--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": ">=0.21.1",
     "bootstrap": "3.4.1",
     "bootstrap-sass": "^3.4.1",
-    "immer": "^3.3.0",
+    "immer": ">=8.0.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.11",
     "react": "^16.3.1",
