--- a/client/package.json
+++ b/client/package.json
@@ -4,30 +4,30 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "axios": ">=0.21.1",
-    "bootstrap": "3.4.1",
-    "bootstrap-sass": "^3.4.1",
-    "immer": ">=8.0.1",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.11",
-    "react": "^16.3.1",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.3.1",
-    "react-google-charts": "^3.0.15",
-    "react-json-pretty": "^1.7.9",
-    "react-redux": "^5.1.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "axios": ">=1.7.0",
+    "bootstrap": "5.3.3",
+    "bootstrap-sass": "^3.4.3",
+    "immer": ">=10.1.1",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
+    "react-json-pretty": "^2.2.0",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^5.4.0",
-    "file-loader": "^6.0.0",
-    "node-sass": "^4.14.1",
-    "resolve-url-loader": "^2.3.2",
-    "webpack": "4.19.1"
+    "@svgr/webpack": "^8.1.0",
+    "file-loader": "^6.2.0",
+    "node-sass": "^9.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "webpack": "5.91.0"
   },
   "scripts": {
     "start": "react-scripts start",
