--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
@@ -27,7 +26,8 @@
     "file-loader": "^6.2.0",
     "node-sass": "^9.0.0",
     "resolve-url-loader": "^5.0.0",
-    "webpack": "5.91.0"
+    "webpack": "5.91.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
